small iphone wrapping fix v2

--- a/assets/css/smc-custom-bootstrap-b.css
+++ b/assets/css/smc-custom-bootstrap-b.css
@@ -22,7 +22,7 @@
 }
 
 /* shrink brand to fit on smaller portrait phones */
-@media (max-width: 320px) {
+@media (max-width: 340px) {
 .navbar-default .navbar-brand {
   font-size: 1.5em;
 }
